# huh

./: .eslintignore  .eslintrc.json  .gitignore  547.bundle.js  547.bundle.js.map  Cargo.toml  bundle.js  bundle.js.map  index.html  package.json  tsconfig.json  webpack.config.js
logic/: Cargo.toml
logic/.cargo/: config
logic/resources/shaders/: simple-vertex.glsl
logic/resources/shaders/polygon/: fragment.glsl  vertex.glsl
logic/resources/shaders/texture/: fragment.glsl  vertex.glsl
logic/src/: lib.rs  mouse_handler.rs  resources.rs  textures.rs  utils.rs
logic/src/engine/: game_object.rs  mod.rs  mouse_handler.rs  raycaster.rs  scene.rs
logic/src/engine/game_objects/: clickable_polygon.rs  clickable_texture.rs  mod.rs  polygon.rs  texture.rs
logic/src/engine/raycaster/: mod.rs  polygon_raycast_target.rs  texture_raycast_target.rs
logic/src/engine/shader/: mod.rs  simple_shader.rs
logic/src/engine/webgl_renderer/: color.rs  gl_viewport.rs  mod.rs  rendering_settings.rs  shader.rs  texture.rs  vec2_webgl_buffer.rs
logic/src/engine/webgl_renderer/extensions/: draw_convex_polygon.rs  draw_hexagon.rs  draw_rectangle.rs  draw_texture.rs  draw_triangle_fan_polygon.rs  draw_triangle_fan_texture.rs  mod.rs  utils.rs
logic/src/engine/webgl_renderer/shaders/: mod.rs  polygon_shader.rs  texture_shader.rs
logic/src/math/: float.rs  hexagon.rs  line.rs  line_segment.rs  mod.rs  polygon.rs  rectangle.rs  vector2.rs
logic/src/scenes/: editor.rs  game.rs  menu.rs  mod.rs
src/: game-object.ts  index.ts  main.rs  mouse-handler.ts  scene.ts
web/: index.html  (+4 more)
(+19 files in other folders)
