[package]
name = "logic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.6", optional = true }
once_cell = "1.17.0"
js-sys = "0.3.61"
console_log = { version = "0.2", features = ["color"] }
log = "0.4.17"
num-traits = "0.2.15"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "WebGlBuffer",
  "WebGlRenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation",
]

[dev-dependencies]
test-case = "2.2.2"

[profile.release]
opt-level = 3
lto = true

